# backend_anonym_audio

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
backend/: __init__.py  audio_flag_test.py  communicate_test.py  test.py  test_eleven_labs.py
backend/FamilyNotifier/: service.py
backend/FilterService/: chileFilter.py  filter.py  userFilter.py
backend/Notifier/: service.py
backend/api/: audio_anonymizer_http.py  audio_flag_websocket.py  communicate_websocket.py
backend/audioAnonymizer/: service.py
backend/services/: __init__.py  audio_flag_service.py  notification.py  speech_to_text.py
scripts/: send_twilio_alert.py
tests/: test_audio_anonymizer_http.py  test_audio_flag_websocket.py  test_communicate_filtered_websocket.py  test_communicate_websocket.py  test_family_notifier_service.py  test_filter_flagger_notifier.py  test_room_disconnects.py
